# Project-Vulnerabilities-Analyzer

./: .gitignore  CMakeLists.txt  README.md  analyzer.cpp  celery_app.py  commands.txt  dump.rdb  requirements.txt
app/: main.py  tasks.py
static/: index.html
